Add 'WordsRepository' and related classes.
Signed-off-by: Milad <j2milad7@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     // Common
     implementation Libs.Common.gson
+    implementation Libs.Common.arrowCore
 
     // Test Dependencies
     testImplementation Libs.Testing.junit
