--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     package="dev.ma7.fallingwords">
 
     <application
-        android:allowBackup="true"
         android:name=".app.FallingWordsApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -15,7 +15,8 @@
 
         <activity
             android:name=".view.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.FallingWords.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
